# momoichigo

./: .deepsource.toml  .dockerignore  .flake8  .gitignore  .lgtm.yml  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-image.yml  codeql-analysis.yml  flake8.yml  hadolint.yml  mypy.yml  pytest.yml  release.yml  test.yml  trivy.yml
config/: .env.examples
extras/: cors-config.json
momoichigo/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
momoichigo/app/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
momoichigo/app/migrations/: 0001_initial.py  0002_alter_resource_file.py  0002_girl_scene.py  0003_auto_20210930_1702.py  0004_alter_resourcequeue_resource.py  0005_auto_20211007_1520.py
momoichigo/app/models/: __init__.py  girl.py  resource.py  resource_queue.py  scene.py
momoichigo/app/serializers/: __init__.py  girl_serializer.py  resource_queue_serializer.py  resource_serializer.py  scene_serializer.py
momoichigo/app/signals/: __init__.py  resource.py  resource_signal.py
momoichigo/app/signals/threading/: __init__.py  fetcher.py
momoichigo/app/views/: __init__.py  girl_view.py  resource_queue_view.py  resource_view.py  resource_view_set.py  scene_view.py  twitter_view.py
tests/: conftest.py
tests/app/: conftest.py  test_models.py  test_serializers.py  test_signals.py  test_views.py
tests/app/models/: test_resource.py  test_resource_queue.py
tests/app/serializers/: test_serializers.py
tests/app/signals/: test_resource_signals.py
tests/app/views/: test_resource_query_views.py  test_resource_queue_views.py  test_resource_views.py
tests/e2e/: test_resources.py
tests/test_app/: test_models.py  test_views.py
tests/unit/app/: test_models.py  test_urls.py
