#################################### black ####################################
[tool.black]
target-version = ['py39']
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .venv
)
'''


################################### coverage ###################################
[tool.coverage]
[tool.coverage.run]
branch = true
cover_pylib = false
source = ["momoichigo/app/"]
omit = [
    ".venv/*",
    ".pytest_cache/*",
    "*/__pycache__/*",
    "tests/*",
    "momoichigo/app/migrations/*",
]

[tool.coverage.paths]
source = ["momoichigo"]


#################################### isort #####################################
[tool.isort]
profile = "black"
src_paths = ["momoichigo"]
skip = ["migrations"]


#################################### pytest ####################################
[tool.pytest]
[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "-vv",
    "--cov",
    "--cov-branch",
]
testpaths = ["tests"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
required_plugins = [
    "pytest-django",
    "pytest-cov",
]
DJANGO_SETTINGS_MODULE = "momoichigo.settings"


#################################### mypy ####################################
[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
disallow_untyped_defs = true
# warn_return_any = true
warn_unused_configs = true
files = [
    "momoichigo/**/*.py"
]
[[tool.mypy.overrides]]
module = "momoichigo.app.migrations.*"
ignore_errors = true


#################################### poerty ####################################
[tool.poetry]
name = "momoichigo"
version = "0.0.1"
description = "ICHIGO KOHINATA"
authors = ["nothink <gakongakon@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = {extras = ["argon2"], version = "^3.2"}
djangorestframework = "^3.12"
PyYAML = "^5.4.1"
uritemplate = "^3.0.1"
django-environ = "^0.4"
django-storages = {extras = ["google"], version = "^1.11"}
uvicorn = "*"
gunicorn = "^20"
psycopg2 = "^2.9"
requests = "^2.26"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.12"
pytest-django = "^4.4"
black = "*"
isort = {extras = ["pyproject"], version = "^5.9"}
flake8 = "^3.9"
flake8-django = "^1.1"
flake8-black = "^0.2"
flake8-isort = "^4.0"
# flake8-print = "^4.0"
flake8-annotations = "^2.6"
# flake8-docstrings = "^1.6"
pre-commit = "^2.13"
mypy = "*"
types-requests = "^2.25"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
